<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IkeaCart</string>
    <string name="no_items">No Items Yet</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_pref">Setting</string>
    <string name="name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="unitprice">Unit Price</string>
    <string name="location">Location</string>
    <string name="location_prompt">Choose a location</string>
    <string name="confirm">Confirm</string>
    <string name="menu_delete">Delete</string>
    <string name="priority">Priority</string>
    <string name="summary">Summary</string>
    <string name="tax">Tax Rate</string>
    <string name="bin">Bin</string>
    <string name="aisle">Aisle</string>
    <string name="misc">Misc</string>
</resources>
