<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="*"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <TableRow>
    <TextView 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_column="0"
	android:text="@string/name" 
	/>
    <EditText 
	android:id="@+id/name" 
	android:layout_width="50sp"
	android:layout_height="wrap_content" 
	android:layout_column="2"
	android:layout_span="5"
	/>
  </TableRow>
  <TableRow>
    <TextView 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:text="@string/quantity" 
	android:layout_column="0"
	/>
    <EditText 
	android:id="@+id/quantity" 
	android:maxLength="10"
	android:numeric="integer"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:layout_column="2"
	/>
    <TextView 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:text="@string/unitprice" 
	android:layout_column="4"
	/>
    <EditText 
	android:id="@+id/unitprice" 
	android:maxLength="10"
	android:numeric="decimal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:layout_column="6"
	/>
    
  </TableRow>
  <TableRow>
    <TextView 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:text="@string/location" 
	android:layout_column="0"
	/>
    <Spinner
	android:id="@+id/location" 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:drawSelectorOnTop="true"
	android:prompt="@string/location_prompt"
	android:layout_column="2"
	android:layout_span="5"
	/>
  </TableRow>
  <TableRow>
    <TextView 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:layout_column="0"
	android:text="@string/priority" />        
  </TableRow>
  <TableRow>
    <RadioGroup
	android:id="@+id/priority" 
	android:layout_column="1"
	android:layout_span="6"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_weight="1">
      <RadioButton
	  android:id="@+id/priority_1"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:text="1"
	  />
      <RadioButton
	  android:id="@+id/priority_2"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:text="2"
	  />
      <RadioButton
	  android:id="@+id/priority_3"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:text="3"
	  />
      <RadioButton
	  android:id="@+id/priority_4"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:text="4"
	  />
      <RadioButton
	  android:id="@+id/priority_5"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:text="5"
	  />
    </RadioGroup>        
  </TableRow>
  <TableRow>
    <Button 
	android:id="@+id/confirm" 
	android:layout_column="0"
	android:text="@string/confirm"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" />
  </TableRow>
</TableLayout>

